<resources>
    <string name="hotel_reviews">(%1$d)</string>
    <string name="app_name">Easytobook</string>
    <string name="location_chooser_text">Current Location</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <plurals name="hotels_count_available">
        <item quantity="one">We found one match</item>
        <item quantity="other">We found <b>%d</b> matches</item>
    </plurals>
    <plurals name="reviews_number_text">
        <item quantity="one">One Review</item>
        <item quantity="other">%d Reviews</item>
    </plurals>
    <string name="hotel_price_per_night">%1$s per night</string>
    <string name="amsterdam">Amsterdam</string>
    <string name="tripadvisor_partnership">IN PARTNERSHIP WITH TRIPADVISOR</string>
    <string name="datepicker_arrival">Arrival</string>
    <string name="datepicker_depature">Depart</string>
    <string name="datepicker_select">SELECT</string>
    <string name="booking_activity_title">Booking</string>
    <string name="confirmation">Confirmation</string>
    <string name="special_free_cancellation">Free Cancellation</string>
    <string name="special_breakfast_included">Breakfast Included</string>
    <string name="special_discount">Special Discount</string>
    <string name="terms_and_condition">I agree to the Easytobook <a href="http://www.easytobook.com/en/disclaimer/?amu=280825437">Terms &amp; Conditions</a> and <a href="http://www.easytobook.com/en/privacy/?amu=280825437">Privacy &amp; Cookies</a> by making the reservation</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="rating_location">Location</string>
    <string name="rating_rooms">Rooms</string>
    <string name="rating_cleanliness">Cleanliness</string>
    <string name="rating_value">Value</string>
    <string name="rating_service">Service</string>
    <string name="rating_sleep_quality">Sleep Quality</string>
    <string name="loading_more">Loading more…</string>
    <string name="anonymous">Anonymous</string>
    <string name="apply">Apply</string>
    <string name="check_in_caps">CHECK-IN</string>
    <string name="check_out_caps">CHECK-OUT</string>
    <plurals name="rooms_caps">
        <item quantity="one">ROOM</item>
        <item quantity="other">ROOMS</item>
    </plurals>
    <string name="rooms">ROOMS</string>
    <plurals name="persons_caps">
        <item quantity="one">PERSON</item>
        <item quantity="other">PERSONS</item>
    </plurals>
    <string name="guests">GUESTS</string>
    <plurals name="guests_caps">
        <item quantity="one">GUEST</item>
        <item quantity="other">GUESTS</item>
    </plurals>
    <string name="checkout_caps">CHECK-OUT</string>
    <string name="filter_accommodation_types">Accommodation types</string>
    <string name="filter_facilities">Facilities</string>
    <string name="filters_title">Filters</string>
    <string name="landmarks_filters_title">Point of interest Filters</string>
    <string name="sort_title">Sort</string>
    <string name="current_location">Current Location</string>
    <string name="sort_by">Sort by…</string>
    <string name="choose_payment_method">Choose your preferred payment method</string>
    <string name="credit_card">Credit Card</string>
    <string name="paypal">Pay Pal</string>
    <string name="android_pay">Android Pay</string>
    <string name="personal_details">Personal Details</string>
    <string name="credit_card_details">Credit Card Details</string>
    <string name="use_secure_connection">We use a secure connection and encrypted storage to protect your personal information</string>
    <string name="ccv">CCV</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="first_name_on_card">First name as on card</string>
    <string name="last_name_on_card">Last name as on card</string>
    <string name="card_number">Card number</string>
    <string name="card_type">Card type</string>
    <string name="billing_address">Billing Address</string>
    <string name="next">Next</string>
    <string name="proceed_to_confirmation">Proceed to Confirmation</string>
    <string name="login_or_signup">Login or signup for faster payment</string>
    <string name="login">Login</string>
    <string name="facebook">Facebook</string>
    <string name="or">Or</string>
    <string name="email">Email</string>
    <string name="signup">Signup</string>
    <string name="booking_confirmed"><![CDATA[Dear <b>%s</b>, thank you.<br>Your booking is <font color="#21C097"> confirmed </font>.]]></string>
    <string name="booking_cancel"><![CDATA[Dear <b>%1$s</b>, thank you.<br>Your booking is <font color="#CB4D00"> <b>%2$s</b> </font>.]]></string>
    <string name="booking_information">Booking Information</string>
    <string name="title_activity_booking_summary">Booking Details</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="currency">Currency</string>
    <string name="select_currency">Select currency</string>
    <string name="free_cancellation">Free cancellation</string>
    <string name="non_refundable">Non-refundable</string>
    <string name="lowest_price">Lowest price</string>
    <string name="view_more_available_rooms">View all available rooms</string>
    <string name="book_now">Book Now</string>
    <string name="settings_about">About</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="version">Version</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="view_available_rooms">View all available rooms</string>
    <string name="show_landmarks">Show landmarks within 1km</string>
    <string name="check_in_less_than_today_worning">Check-in cannot be before today</string>
    <string name="modify_preferences">Change dates</string>
    <string name="show_price">Show price</string>
    <string name="price_per_night">Per night</string>
    <string name="price_per_stay">Per stay</string>
    <string name="my_booking">My booking</string>
    <string name="setting">Setting</string>
    <string name="title_activity_login">Login</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot you password?</string>
    <string name="title_activity_room_list">Available rooms</string>
    <string name="mainnav_recent_search">Recent Searches</string>
    <string name="mainnav_favorites">Favorites</string>
    <string name="mainnav_creditcards">Credit Cards</string>
    <string name="mainnav_profile">Profile</string>
    <string name="mainnav_bookings">Bookings</string>
    <string name="mainnav_code_scanner">QR Scan</string>
    <string name="mainnav_settings">Settings</string>
    <string name="open_with">Open page with</string>
    <string name="login_with_google">Login with Google</string>
    <string name="sign_up_terms_and_condition">By clicking Sign Up, you are agree with our <a href="http://www.easytobook.com/en/disclaimer/?amu=280825437">Terms &amp; Conditions</a> and <a href="http://www.easytobook.com/en/privacy/?amu=280825437">Privacy Policy</a></string>
    <string name="receive_deals_emails">I\'d like to receive exclusive deals and personalized recommendations via email</string>
    <string name="tab_title_login">LOGIN</string>
    <string name="tab_title_sign_up">SIGN UP</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="password_doesnt_match">Password doesn\'t match</string>
    <string name="signup_message">Thank you for signing up. Please check your email to activate your account</string>
    <string name="signup_confirm_message">Your account is activated. You will be logged in</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change password</string>
    <string name="country">Country</string>
    <string name="phone_number">Phone number</string>
    <string name="femaie">Female</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="personal_information">Personal Information</string>
    <string name="save">Save</string>
    <string name="recent_searched">Recent Searches</string>
    <string name="language">Language</string>
    <string name="select_language">Select language</string>
    <string name="allow_notification">Allow notification</string>
    <string name="total_price">Total Price</string>
    <string name="manage_confirmed_booking">View details</string>
    <string name="favorites">Favorites</string>
    <string name="load_more_currencies">Load more currencies</string>
    <string name="booking_summary_title">Booking details</string>
    <plurals name="nights_caps">
        <item quantity="one">NIGHT</item>
        <item quantity="other">NIGHTS</item>
    </plurals>
    <string name="special_deal">Special deal %1$d%% Discount</string>
    <plurals name="text_summary">
        <item quantity="one">Price for one night</item>
        <item quantity="other">Price for %d nights</item>
    </plurals>
    <string name="text_tax_summary">ex. extra tax of %1$s</string>
    <string name="check_in">Check-in</string>
    <string name="check_out">Check-out</string>
    <string name="booking_number">Booking number</string>
    <string name="manage_your_reservation">Manage your reservation</string>
    <string name="hotels_and_rooms"><![CDATA[Hotels & room(s)]]></string>
    <string name="booking_important_information">Important Information</string>
    <string name="contact_us">Contact us</string>
    <string name="done">Done</string>
    <string name="add_more_booking">Add existing booking</string>
    <string name="add">Add</string>
    <string name="cancel_reservation">Cancel reservation</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="details">Details</string>
    <string name="reviews">Reviews</string>
    <string name="important_information_and_conditions">Important information and conditions</string>
    <string name="need_help_with_booking">Need help or do you have any questions regarding your booking?</string>
    <string name="additional_information">Additional information</string>
    <string name="cancellation_policy">Cancellation policy</string>
    <string name="payment_information">Payment information</string>
    <string name="tax_recovery_charges_and_fees">Tax recovery charge and fees</string>
    <string name="reset_filters">reset filters</string>
    <string name="bad_internet_connection">• Bad Internet connection</string>
    <string name="filters_not_match">• Your filters have no match</string>
    <string name="no_availability">• There is no availability for the hotels in the selected dates</string>
    <string name="no_hotels_in_area">• There are no hotels in our inventory for the selected area</string>
    <string name="several_reasons">This could have happened for several reasons.</string>
    <string name="currently_no_hotels_available">There are currently no hotels available for your chosen preferences</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="postal_code">Postal code</string>
    <string name="or_by_email">Or by email</string>
</resources>