<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/HotelsAppTheme.Fragment.SemiTransparent.Container">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/HotelsAppTheme.Fragment.SemiTransparent.Content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <TextView
            style="@style/HotelsAppTheme.TextAppearance.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/personal_information" />

        <EditText
            android:id="@+id/profile_name"
            style="@style/HotelsAppTheme.Widget.Booking.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/first_name"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/profile_surname"
            style="@style/HotelsAppTheme.Widget.Booking.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/last_name"
            android:inputType="textCapWords" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/minimum_default_padding"
                android:src="@drawable/info_dot" />

            <Button
                android:id="@+id/profile_birthdate"
                style="@style/HotelsAppTheme.Widget.Booking.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_padding"
                android:gravity="center"
                android:text="@string/date_of_birth" />

        </LinearLayout>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/gender_female"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/femaie" />

            <RadioButton
                android:id="@+id/gender_male"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/gender_other"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/other" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_save"
            style="@style/HotelsAppTheme.Widget.AccentBottomButton"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/bottom_button_height"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="8dp"
            android:text="@string/save" />
    </LinearLayout>

</FrameLayout>