<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:choiceMode="singleChoice"
    android:divider="@android:color/black"
    android:dividerHeight="2dp"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/nav_header_view"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/theme_primary" />


    <TextView
        android:id="@+id/nav_recent_searches"
        style="@style/HotelsAppTheme.Widget.NavDrawer.Item"
        android:drawableLeft="@drawable/mainnav_recent_search"
        android:lines="1"
        android:text="@string/mainnav_recent_search" />

    <TextView
        android:id="@+id/nav_favorites"
        style="@style/HotelsAppTheme.Widget.NavDrawer.Item"
        android:drawableLeft="@drawable/mainnav_favourites"
        android:text="@string/mainnav_favorites" />

    <TextView
        android:id="@+id/nav_code_scanner"
        style="@style/HotelsAppTheme.Widget.NavDrawer.Item"
        android:drawableLeft="@drawable/mainnav_scanner"
        android:text="@string/mainnav_code_scanner" />

    <View
        android:id="@+id/nav_divider"
        style="@style/HotelsAppTheme.Widget.NavDrawer.Separator" />

    <!--<TextView-->
    <!--android:id="@+id/nav_profile"-->
    <!--android:text="@string/mainnav_profile"-->
    <!--android:drawableLeft="@drawable/mainnav_my_profile"-->
    <!--style="@style/HotelsAppTheme.Widget.NavDrawer.Item" />-->

    <TextView
        android:id="@+id/nav_bookings"
        style="@style/HotelsAppTheme.Widget.NavDrawer.Item"
        android:drawableLeft="@drawable/mainnav_my_bookings"
        android:text="@string/mainnav_bookings" />

    <!--<TextView-->
    <!--android:id="@+id/nav_creditcards"-->
    <!--android:text="@string/mainnav_creditcards"-->
    <!--android:drawableLeft="@drawable/mainnav_creditcards"-->
    <!--style="@style/HotelsAppTheme.Widget.NavDrawer.Item" />-->


    <View style="@style/HotelsAppTheme.Widget.NavDrawer.Separator" />

    <TextView
        android:id="@+id/nav_settings"
        style="@style/HotelsAppTheme.Widget.NavDrawer.Item"
        android:drawableLeft="@drawable/mainnav_my_settings"
        android:text="@string/mainnav_settings" />


</LinearLayout>

