<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="@dimen/default_padding"
        android:paddingLeft="@dimen/default_padding"
        android:paddingRight="@dimen/default_padding"
        android:paddingTop="@dimen/default_padding">

        <Button
            android:id="@+id/btn_login_facebook"
            style="@style/HotelsAppTheme.Widget.Login.FacebookButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/login_with_facebook"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_login_google"
            style="@style/HotelsAppTheme.Widget.Login.GoogleButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/default_padding"
            android:text="@string/login_with_google" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/default_padding"
                android:layout_weight="1"
                android:background="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_padding"
                android:layout_marginTop="@dimen/default_padding"
                android:text="@string/or_by_email" />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/default_padding"
                android:layout_weight="1"
                android:background="@color/gray" />


        </LinearLayout>

        <AutoCompleteTextView
            android:id="@+id/email"
            style="@style/HotelsAppTheme.Widget.Login.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@+id/password" />

        <EditText
            android:id="@+id/password"
            style="@style/HotelsAppTheme.Widget.Login.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/forgot_password_button"
            style="@style/HotelsAppTheme.Widget.AccentTextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_your_password" />

        <Button
            android:id="@+id/login_button"
            style="@style/HotelsAppTheme.Widget.Login.AccentBottomButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:text="@string/login" />
    </LinearLayout>
</FrameLayout>