<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <include layout="@layout/member_header" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_padding"
                android:hint="email@easytobook.com" />

            <AutoCompleteTextView
                android:id="@+id/profile_country"
                style="@style/HotelsAppTheme.Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/country"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:nextFocusDown="@+id/phone_number" />

            <EditText
                android:id="@+id/phone_number"
                style="@style/HotelsAppTheme.Widget.Booking.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/phone_number"
                android:inputType="phone" />

            <CheckBox
                android:id="@+id/subscribe_checkbox"
                style="@style/HotelsAppTheme.TextAppearance.Normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_padding"
                android:text="@string/receive_deals_emails" />

            <Button
                android:id="@+id/btn_change_password"
                style="@style/HotelsAppTheme.Widget.AccentTextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password" />

            <Button
                android:id="@+id/btn_logout"
                style="@style/HotelsAppTheme.Widget.AccentTextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout" />
        </LinearLayout>

    </ScrollView>


</FrameLayout>